--- a/example/08/css/product.css
+++ b/example/08/css/product.css
@@ -5,3 +5,10 @@ table, th, td {
 th, td { 
   padding:10px 20px; 
 }
+div {
+  border: 1px solid #222; /*1px 실선 테두리 지정*/
+}
+#container {
+  width: 600px; /*container의 너비 지정*/
+  border: none; /*테두리는 없앰*/
+}
