--- a/example/08/css/3column.css
+++ b/example/08/css/3column.css
@@ -3,3 +3,36 @@
   padding:0;
   box-sizing: border-box;
 }
+#container {
+  width: 1200px;  /*내용 전체의 너비*/
+  margin: 20px auto;  /* 내용을 화면 가운데에 배치하도록 좌우 마진 auto */
+}
+#header {
+  width: 100%;  /*부모 요소의 너비와 똑같게*/
+  height: 120px; /*헤더의 높이*/
+  background-color: #acacac;
+}
+#left-sidebar {
+  width: 250px; /*사이드바의 너비*/
+  height: 600px; /*사이드바의 높이*/
+  background-color: #e9e9e9;
+  float: left;
+}
+#contents {
+  width: 800px; /*본문의 너비*/
+  height: 600px;  /*본문의 넓이*/
+  background-color: #f7f7f7;
+  float: left;
+}
+#right-sidebar {
+  width: 150px;   /*사이드바의 너비*/
+  height: 600px;  /*사이드바의 높이*/
+  float: right;   /*오른쪽으로 플로팅*/
+  background-color: #e9e9e9; 
+}
+#footer {
+  width: 100%;  /*부모 요소의 너비와 똑같게*/
+  height: 100px;  /*푸터의 높이*/
+  background-color: #888888;
+  clear: left;  /*플로팅 해제*/
+}
