--- a/example/10/css/register1.css
+++ b/example/10/css/register1.css
@@ -51,3 +51,24 @@ body {
 	font-size: 13px;  /* 글자 크기 - 13px */
 	width: 110px;  /* 너비 - 110px */
 }
+
+#signup input {
+	border: 1px red solid; /*필수 입력 필드에 빨간색 테두리*/
+}
+
+#signup input[readonly] {
+	border: none;	/*읽기 전용 필드의 테두리 없애기*/
+}
+
+#signup input[type=text], #signup input[type=password], #signup input[type=tel],
+#signup input[type=email] {
+	border: 1px solid #ccc;	/*테두리 지정*/
+	border-radius: 3px;	/*테두리 모서리를 둥글게 지정*/
+	font-size: 13px;	/*글자 크기 지정*/
+	padding: 5px;		/*패딩 지정*/
+	width: 200px; /*너비 지정*/
+}
+
+#signup input[required] {
+	border: 1px red solid;
+}
