--- a/example/10/css/register2.css
+++ b/example/10/css/register2.css
@@ -53,6 +53,7 @@ body {
 }
 
 #signup input[type=text], #signup input[type=password], #signup input[type=tel], #signup input[type=email] {  /* 속성 선택자 사용 */
+	/*#sign input:not([type=radio])도 가능*/
 	border: 1px solid #ccc;  /* 텍스트 필드 테두리 지정 */
 	border-radius: 3px;  /* 텍스트 필드 모서리를 둥글게 지정 */
 	font-size: 13px;  /* 텍스트 필드 안의 글자 크기 지정 */
@@ -66,4 +67,14 @@ body {
 
 #signup input[readonly] {  /* 읽기 전용 필드의 스타일 */
 	border:none;
+}
+
+#signup fieldset:last-of-type {
+	border: none;
+	margin-bottom: 0;
+}
+
+#signup button:hover {
+	background: color #222;
+	color: #fff;
 }
