--- a/example/11/css/product.css
+++ b/example/11/css/product.css
@@ -14,6 +14,7 @@ h1 {
   padding: 0;
   margin: 10px;
   overflow: hidden;
+  position: relative;
 }
 .prod-list img {
   margin:0;
@@ -21,3 +22,25 @@ h1 {
   float:left;
   z-index:5;
 } 
+
+.prod-list .caption {
+  position: absolute;
+  top: 200px; /*기준 위치보다 200px 아래로 */
+  width: 300px;
+  height: 200px;
+  padding-top: 20px;
+  background: rgba(0, 0, 0, 0.6); /*반투명한 검정 배경*/
+  opacity: 0; /*화면에 보이지 않게*/
+  transition: all 0.6s ease-in-out; /*부드럽게 나타나도록 트랜지션 추가*/
+  z-index: 10;  /*다른 용소보다 위에 있도록*/
+}
+
+.prod-list li:hover .caption {
+  opacity: 1;   /*설명 글을 화면에 나타나게*/
+  transform: translateY(-200px);  /*설명 글을 위쪽으로 200px 이동*/
+}
+
+.prod-list .caption h2, .prod-list .caption p{
+  color: #fff;
+  text-align: center;
+}
